<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.l2jserver</groupId>
	<artifactId>l2j-server-game</artifactId>
	<version>2.6.3.0-SNAPSHOT</version>
	<name>L2J Game Server</name>
	<properties>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- External -->
		<slf4j.version>2.0.17</slf4j.version>
		<log4j.version>2.25.3</log4j.version>
		<InMemoryJavaCompiler.version>1.3.0</InMemoryJavaCompiler.version>
		<gson.version>2.13.2</gson.version>
		<owner.version>1.0.12</owner.version>
		<jda.version>5.3.0</jda.version>
		<!-- L2J -->
		<l2j-server-commons.version>2.6.9.0</l2j-server-commons.version>
		<l2j-server-geo-driver.version>2.6.5.0</l2j-server-geo-driver.version>
		<!-- Test -->
		<junit-jupiter.version>6.0.1</junit-jupiter.version>
		<mockito.version>5.21.0</mockito.version>
		<assertj-core.version>3.27.6</assertj-core.version>
		<!-- Plugins -->
		<dependency-check-maven.level>8</dependency-check-maven.level>
		<dependency-check-maven.version>12.1.9</dependency-check-maven.version>
		<maven-assembly-plugin.version>3.8.0</maven-assembly-plugin.version>
		<maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
		<maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
		<maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
	</properties>
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<build>
		<finalName>l2jserver</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>-Xshare:off -javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<proc>full</proc>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>libs/</classpathPrefix>
							<mainClass>com.l2jserver.gameserver.GameServer</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>${maven-assembly-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>${project.artifactId}-${project.version}</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<descriptors>
								<descriptor>src/main/assembly/zip.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mdkt.compiler</groupId>
			<artifactId>InMemoryJavaCompiler</artifactId>
			<version>${InMemoryJavaCompiler.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.aeonbits.owner</groupId>
			<artifactId>owner-java8</artifactId>
			<version>${owner.version}</version>
		</dependency>
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>${jda.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.protobuf</groupId>
					<artifactId>protobuf-java</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- L2J -->
		<dependency>
			<groupId>org.bitbucket.l2jserver</groupId>
			<artifactId>l2j-server-commons</artifactId>
			<version>${l2j-server-commons.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bitbucket.l2jserver</groupId>
			<artifactId>l2j-server-geo-driver</artifactId>
			<version>${l2j-server-geo-driver.version}</version>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj-core.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>ci</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
						<version>${dependency-check-maven.version}</version>
						<configuration>
							<failBuildOnCVSS>${dependency-check-maven.level}</failBuildOnCVSS>
							<assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
							<nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>